# C-Reference-Practice

./: .gitignore  CMakeLists.txt  README.md
1-game-over/: GameOver.cpp
11-menu-chooser/: MenuChooser.cpp
11-score-rater-3/: ScoreRater3.cpp
13-play-again/: PlayAgain.cpp
13-play-again-2/: PlayAgain2.cpp
15-finicky-counter/: FinickyCounter.cpp
16-game-designers-network/: GameDesignersNetwork.cpp
17-die-roller/: DieRoller.cpp
17-guess-my-number/: GuessMyNumber.cpp
18-counter/: Counter.cpp
19-string-tester/: StringTester.cpp
2-game-over-2/: GameOver2.cpp
20-hero-inventory/: HeroInventory.cpp
21-tic-tac-toe/: TicTacToe.cpp
22-word-jumble/: WordJumble.cpp
23-hero-inventory-2/: HeroInventory2.cpp
24-high-scores/: HighScores.cpp
25-hangman/: Hangman.cpp
26-instructions/: Instructions.cpp
27-yes-or-no/: YesOrNo.cpp
28-scoping/: Scoping.cpp
29-global-reach/: GlobalReach.cpp
3-expensive-calculator/: ExpensiveCalculator.cpp
30-give-me-a-number/: GiveMeANumber.cpp
31-triple/: Triple.cpp
32-taking-damage/: TakingDamage.cpp
33-mad-lib/: MadLib.cpp
34-referencing/: Referencing.cpp
35-swap/: Swap.cpp
36-inventory-displayer/: InventoryDisplayer.cpp
37-inventory-referencer/: InventoryReferencer.cpp
38-tic-tac-toe/: TicTacToe.cpp
39-pointing/: Pointing.cpp
4-game-stats/: GameStats.cpp
40-swap-pointer/: SwapPointer.cpp
41-inventory-pointer/: InventoryPointer.cpp
42-array-passer/: ArrayPasser.cpp
43-simple-critter/: SimpleCritter.cpp
44-constructor-critter/: ConstructorCritter.cpp
45-private-critter/: PrivateCritter.cpp
46-static-critter/: StaticCritter.cpp
47-critter-caretaker/: CritterCaretaker.cpp
48-critter-farm/: CritterFarm.cpp
49-friend-critter/: FriendCritter.cpp
5-game-stats-2/: GameStats2.cpp
50-heap/: Heap.cpp
51-heap-data-member/: HeapDataMember.cpp
52-game-lobby/: GameLobby.cpp
53-simple-boss/: SimpleBoss.cpp
54-simple-boss-2/: SimpleBoss2.cpp
55-overriding-boss/: OverridingBoss.cpp
56-polymorphic-bad-guy/: PolymorphicBadGuy.cpp
57-abstract-creature/: AbstractCreature.cpp
58-blackjack/: Blackjack.cpp
6-game-stats-3/: GameStats3.cpp
7-lost-fortune/: LostFortune.cpp
8-end-lost-fortune/: EndLostFortune.cpp
8-score-rater/: ScoreRater.cpp
9-score-rater-2/: ScoreRater2.cpp
src/: header.h  main.cpp
src/application/: Application.cpp  Application.h
src/books/beginning-cpp-through-game-programming-third-edition/: include.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-1/: GameOver.cpp  GameOver.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-2/: GameOver2.cpp  GameOver2.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-3/: ExpensiveCalculator.cpp  ExpensiveCalculator.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-4/: GameStats.cpp  GameStats.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-5/: GameStats2.cpp  GameStats2.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-6/: GameStats3.cpp  GameStats3.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-7/: LostFortune.cpp  LostFortune.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-1/exercise-8/: EndLostFortune.cpp  EndLostFortune.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-2/exercise-1/: ScoreRater.cpp  ScoreRater.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-2/exercise-2/: ScoreRater2.cpp  ScoreRater2.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-2/exercise-3/: ScoreRater3.cpp  ScoreRater3.h
src/books/beginning-cpp-through-game-programming-third-edition/chapter-2/exercise-4/: MenuChooser.cpp  MenuChooser.h
